<resources>
    <string name="app_name">PocketDM</string>
    <string name="visualizer">Visualizer</string>
    <string name="home">Home</string>
    <string name="predictor">Predictor</string>
    <string name="settings">Settings</string>
    <string name="editor">Editor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_content_desc">Add a new dataset</string>
    <string name="dataset_item_open">Open</string>
    <string name="dataset_item_edit">Edit</string>
    <string name="dataset_item_delete">Delete</string>
    <string name="dataset_item_content_description">Image describing dataset</string>
    <string name="manually_refresh_the_list">Manually refresh the list</string>
    <string name="training_percentage">Training Percentage</string>
    <string name="will_be_used_for_inputs">Will be used for inputs</string>
    <string name="trainable_columns">Trainable Columns</string>
    <string name="slider_string_tip">Slide to set the percentage of data scooped from the dataset for training</string>
    <string name="classification">Classification</string>
    <string name="linear_regression">Linear Regression</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="column_to_predict">Column To Predict</string>
    <string name="inputs">Inputs</string>
    <string name="action_delete">Delete Row</string>
    <string name="action_delete_column">Delete Column</string>
    <string name="filter">Filter Menu</string>
    <string name="ohe">One Hot Encoding</string>
    <string name="manually_refresh_the_grid">Manually refresh the grid</string>
    <string name="edit_dataset">Edit Dataset</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="version">Version</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_column_name">Edit Column Name</string>
    <string name="edit_value">Edit Value</string>
    <string name="normalize">Normalize Column</string>
</resources>